# wgpu-renderer

./: Cargo.toml  README.md
assets/models/shiba/: scene.gltf
assets/models/stone_cube/: license.txt  scene.gltf
src/: app.rs  environment_map.rs  gltf_loader.rs  gpu_context.rs  graphics.rs  image.rs  layouts.rs  main.rs  material.rs  mesh.rs  model.rs  model_render_pass.rs  render_pass.rs  renderer.rs  scene.rs  shader.wgsl  skybox.rs  skybox_render_pass.rs  surface_context.rs  texture.rs  transform.rs  vertex.rs  window_context.rs
src/camera/: camera_controller.rs  mod.rs
src/entity/: geometry.rs  mesh.rs  mod.rs  node.rs  vertex.rs
src/entity/node/: camera_node.rs  empty_node.rs  mesh_node.rs  mod.rs
src/light/: mod.rs  shadow_camera.rs
src/model/: mesh.rs  mod.rs
src/model/mesh/: mod.rs  primitives.rs  vertex.rs
src/render_pass/: hdr.rs  mod.rs  model_pass.rs  model_render_pass.rs  pbr_pass.rs  pipeline.rs  shadow_pass.rs  skybox_pass.rs  skybox_render_pass.rs
src/render_world/: extracted_camera.rs  extracted_material.rs  extracted_point_light.rs  extracted_skybox.rs  extracted_transform.rs  mod.rs  render_object.rs
src/render_world/extracted/: camera.rs  env_map.rs  material.rs  mesh.rs  mod.rs  point_light.rs  skybox.rs  transform.rs
src/resources/: entity.rs  load_gltf.rs  load_textures.rs  mod.rs  skybox_loader.rs  temp_mesh.rs
src/resources/hdr_loader/: equirectangular.wgsl  mod.rs
src/resources/irr_map_generator/: convolution.wgsl  (+1 more)
src/shaders/: hdr.wgsl  model.wgsl  pbr.wgsl  shadow.wgsl  skybox.wgsl
src/texture/: cubemap.rs  mod.rs
(+4 files in other folders)
