[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.20.1"
winit = "0.29.15"
pollster = "0.3.0"
cgmath = "0.18.0"
rand = "0.8.5"
image = "0.25.1"
gltf = "1.4.0"
